# prsnl

./: .gitignore  CLEAN_PUSH_READY.md  CSRF_TESTING_GUIDE.md  FUTURE_DEPLOYMENT_BUGS.md  GITHUB_PUSH_GUIDE.md  Kareerist Bugs docs.docx  README.md  SUPABASE_MIGRATION.sql  index.html  prompt.txt  run.sh  start-all.bat  start-dev.sh
FRONTEND/: .gitignore  index.html  oauth-debug.html  package-lock.json  package.json  start-all.bat  start.bat  tailwind.config.ts  vite.config.ts
backend/: .gitignore  SUPABASE_MIGRATION_interview_reports.sql  pyproject.toml  requirements.txt  test_oauth.py
backend/app/: .env.example  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/endpoints/: admin.py  ai_analysis.py  ats_score.py  auth.py  cover_letter.py  credits.py  dashboard.py  interview.py  resumes.py  utils.py
backend/app/core/: auth_cookies.py  config.py  csrf.py  rate_limit.py  request_logger.py  request_signing.py
backend/app/db/: redis_client.py  supabase.py
backend/app/schemas/: ats.py  models.py
backend/app/services/: ai_interview.py  ai_retry.py  ats_general_engine.py  ats_jd_engine.py  ats_scoring.py  cover_letter_gen.py  credits.py  deep_analysis.py  hiring_intel.py  humanizer.py  math_engine.py  prompt_sanitizer.py  resume_analyzer.py
backend/tests/: conftest.py  test_critical_paths.py
coming soon/: package-lock.json
docs/: backend_architecture_en.md  backend_architecture_hi.md  frontend_architecture_en.md  frontend_architecture_hi.md  frontend_backend_implementation_details.md  security_updates_chapters.md
kareerist_sofar/: CHANGES_SUMMARY.md  CREDIT_SYSTEM_IMPLEMENTATION.md  DEPLOYMENT_STATUS_SUMMARY.md  INDEX.md  KAREERIST_MASTER_DOCUMENTATION.md  LATEST_UPDATES.md  README.md  chapter_01_project_genesis_and_stack.md  chapter_02_backend_architecture.md  chapter_03_auth_and_security.md  chapter_04_ai_features_and_services.md  chapter_05_frontend_architecture.md  chapter_06_infrastructure_and_deployment.md  chapter_07_bugs_decisions_and_roadmap.md  (+3 more)
src/: index.css
(+67 files in other folders)
