[project]
name = "jobify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "fpdf2>=2.8.5",
    "google-genai>=1.56.0",
    "groq>=1.0.0",
    "gtts>=2.5.4",
    "huggingface-hub>=1.3.1",
    "numpy>=2.4.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "reportlab>=4.4.9",
    "scikit-learn>=1.8.0",
    "supabase>=2.27.0",
]
