[project]
name = "kareerist"
version = "0.1.0"
description = "Kareerist Studio — AI-Powered Career Intelligence Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.128.0",
    "fpdf2==2.8.5",
    "google-genai==1.56.0",
    "groq==1.0.0",
    "gtts==2.5.4",
    "huggingface-hub==1.3.1",
    "numpy==2.4.0",
    "pyspellchecker==0.8.3",
    "pydantic-settings==2.12.0",
    "pypdf==6.5.0",
    "PyJWT==2.10.1",
    "redis==5.0.0",
    "slowapi==0.1.9",
    "reportlab==4.4.9",
    "scikit-learn==1.8.0",
    "sentry-sdk[fastapi]==2.29.1",
    "supabase==2.27.0",
    "uvicorn==0.40.0",
    "starlette==0.50.0",
    "httpx==0.28.1",
    "anyio==4.12.0",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
]
